--- a/.config
+++ b/.config
@@ -110,7 +110,7 @@ CONFIG_SQLITE3_FTS4=y
 CONFIG_SQLITE3_FTS5=y
 CONFIG_SQLITE3_JSON1=y
 CONFIG_SQLITE3_RTREE=y
-CONFIG_TARGET_KERNEL_PARTSIZE=64
+CONFIG_TARGET_KERNEL_PARTSIZE=128
 CONFIG_TARGET_ROOTFS_PARTSIZE=512
 CONFIG_TARGET_ROOTFS_TARGZ=y
 CONFIG_TESTING_KERNEL=y
@@ -118,6 +118,67 @@ CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
+CONFIG_DEFAULT_base-files=y
+CONFIG_DEFAULT_blkid=y
+CONFIG_DEFAULT_busybox=y
+CONFIG_DEFAULT_ca-bundle=y
+CONFIG_DEFAULT_dnsmasq=y
+CONFIG_DEFAULT_dropbear=y
+CONFIG_DEFAULT_e2fsprogs=y
+# CONFIG_DEFAULT_firewall4 is not set
+CONFIG_DEFAULT_firewall=y
+CONFIG_DEFAULT_fstools=y
+CONFIG_DEFAULT_kmod-amazon-ena=y
+CONFIG_DEFAULT_kmod-atlantic=y
+CONFIG_DEFAULT_kmod-bcmgenet=y
+CONFIG_DEFAULT_kmod-dwmac-imx=y
+CONFIG_DEFAULT_kmod-dwmac-rockchip=y
+CONFIG_DEFAULT_kmod-dwmac-sun8i=y
+CONFIG_DEFAULT_kmod-e1000e=y
+CONFIG_DEFAULT_kmod-fs-vfat=y
+CONFIG_DEFAULT_kmod-fsl-dpaa1-net=y
+CONFIG_DEFAULT_kmod-fsl-dpaa2-net=y
+CONFIG_DEFAULT_kmod-fsl-enetc-net=y
+CONFIG_DEFAULT_kmod-fsl-fec=y
+CONFIG_DEFAULT_kmod-gpio-pca953x=y
+CONFIG_DEFAULT_kmod-i2c-mux-pca954x=y
+CONFIG_DEFAULT_kmod-mvneta=y
+CONFIG_DEFAULT_kmod-mvpp2=y
+CONFIG_DEFAULT_kmod-nft-offload=y
+CONFIG_DEFAULT_kmod-octeontx2-net=y
+CONFIG_DEFAULT_kmod-phy-aquantia=y
+CONFIG_DEFAULT_kmod-phy-broadcom=y
+CONFIG_DEFAULT_kmod-phy-marvell=y
+CONFIG_DEFAULT_kmod-phy-marvell-10g=y
+CONFIG_DEFAULT_kmod-phy-realtek=y
+CONFIG_DEFAULT_kmod-phy-smsc=y
+CONFIG_DEFAULT_kmod-renesas-net-avb=y
+CONFIG_DEFAULT_kmod-rtc-rx8025=y
+CONFIG_DEFAULT_kmod-sfp=y
+CONFIG_DEFAULT_kmod-thunderx-net=y
+CONFIG_DEFAULT_kmod-vmxnet3=y
+CONFIG_DEFAULT_kmod-wdt-sp805=y
+CONFIG_DEFAULT_libc=y
+CONFIG_DEFAULT_libgcc=y
+CONFIG_DEFAULT_libustream-mbedtls=y
+CONFIG_DEFAULT_logd=y
+CONFIG_DEFAULT_mkf2fs=y
+CONFIG_DEFAULT_mtd=y
+CONFIG_DEFAULT_netifd=y
+CONFIG_DEFAULT_nftables=y
+CONFIG_DEFAULT_odhcp6c=y
+CONFIG_DEFAULT_odhcpd-ipv6only=y
+CONFIG_DEFAULT_opkg=y
+CONFIG_DEFAULT_partx-utils=y
+CONFIG_DEFAULT_ppp=y
+CONFIG_DEFAULT_ppp-mod-pppoe=y
+CONFIG_DEFAULT_procd=y
+CONFIG_DEFAULT_procd-seccomp=y
+CONFIG_DEFAULT_procd-ujail=y
+CONFIG_DEFAULT_uci=y
+CONFIG_DEFAULT_uclient-fetch=y
+CONFIG_DEFAULT_urandom-seed=y
+CONFIG_DEFAULT_urngd=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_IP_LINK is not set
 # CONFIG_BUSYBOX_CONFIG_IP is not set
 CONFIG_GNUTLS_ALPN=y
@@ -299,6 +360,20 @@ CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
 #
 # LuCI
 #
+#
+# Global build settings
+#
+CONFIG_JSON_OVERVIEW_IMAGE_INFO=y
+# CONFIG_JSON_CYCLONEDX_SBOM is not set
+# CONFIG_ALL_NONSHARED is not set
+# CONFIG_ALL_KMODS is not set
+# CONFIG_ALL is not set
+# CONFIG_BUILDBOT is not set
+CONFIG_SIGNED_PACKAGES=y
+CONFIG_SIGNATURE_CHECK=y
+CONFIG_DOWNLOAD_CHECK_CERTIFICATE=y
+# CONFIG_USE_APK is not set
+
 
 #
 # 1. Collections
