--- a/.config
+++ b/.config
@@ -12,10 +12,6 @@ CONFIG_ARIA2_OPENSSL=y
 CONFIG_ARIA2_WEBSOCKET=y
 CONFIG_AUTOREMOVE=y
 CONFIG_BIND_ENABLE_DOH=y
-# CONFIG_BINUTILS_USE_VERSION_2_40 is not set
-CONFIG_BINUTILS_USE_VERSION_2_42=y
-CONFIG_BINUTILS_VERSION="2.42"
-CONFIG_BINUTILS_VERSION_2_42=y
 CONFIG_BPF_TOOLCHAIN_HOST=y
 CONFIG_BPF_TOOLCHAIN_HOST_PATH=""
 # CONFIG_BPF_TOOLCHAIN_NONE is not set
@@ -34,10 +30,11 @@ CONFIG_DOCKER_OPTIONAL_FEATURES=y
 CONFIG_DOCKER_STO_BTRFS=y
 CONFIG_DOCKER_STO_EXT4=y
 CONFIG_DWARVES=y
+CONFIG_EXTRA_OPTIMIZATION=""
 # CONFIG_GCC_USE_VERSION_12 is not set
-CONFIG_GCC_USE_VERSION_14=y
-CONFIG_GCC_VERSION="14.0.1"
-CONFIG_GCC_VERSION_14=y
+CONFIG_GCC_USE_VERSION_15=y
+CONFIG_GCC_VERSION="15.0.0"
+CONFIG_GCC_VERSION_15=y
 CONFIG_GNUTLS_ALPN=y
 CONFIG_GNUTLS_ANON=y
 CONFIG_GNUTLS_DTLS_SRTP=y
@@ -52,6 +49,7 @@ CONFIG_KERNEL_BPF_EVENTS=y
 CONFIG_KERNEL_BTRFS_FS_POSIX_ACL=y
 CONFIG_KERNEL_BUILD_DOMAIN="cooluc.com"
 CONFIG_KERNEL_BUILD_USER="admin"
+CONFIG_KERNEL_CC="clang"
 CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y
 CONFIG_KERNEL_CGROUP_DEVICE=y
 CONFIG_KERNEL_CGROUP_FREEZER=y
@@ -69,12 +67,14 @@ CONFIG_KERNEL_HUGETLB_PAGE=y
 # CONFIG_KERNEL_KALLSYMS is not set
 CONFIG_KERNEL_KPROBES=y
 CONFIG_KERNEL_KPROBE_EVENTS=y
+CONFIG_KERNEL_LRNG=y
 CONFIG_KERNEL_MEMCG_SWAP_ENABLED=y
 CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y
 CONFIG_KERNEL_NET_CLS_CGROUP=y
 CONFIG_KERNEL_PERF_EVENTS=y
 CONFIG_KERNEL_TRANSPARENT_HUGEPAGE=y
 CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y
+# CONFIG_KERNEL_WERROR is not set
 CONFIG_KERNEL_XDP_SOCKETS=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
@@ -140,6 +140,7 @@ CONFIG_PACKAGE_containerd=y
 CONFIG_PACKAGE_coremark=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
+CONFIG_PACKAGE_coreutils-cat=y
 CONFIG_PACKAGE_coreutils-chmod=y
 CONFIG_PACKAGE_coreutils-chown=y
 CONFIG_PACKAGE_coreutils-chroot=y
@@ -155,6 +156,7 @@ CONFIG_PACKAGE_coreutils-nproc=y
 CONFIG_PACKAGE_coreutils-rm=y
 CONFIG_PACKAGE_coreutils-sha1sum=y
 CONFIG_PACKAGE_coreutils-sha512sum=y
+CONFIG_PACKAGE_coreutils-sleep=y
 CONFIG_PACKAGE_coreutils-timeout=y
 CONFIG_PACKAGE_coreutils-truncate=y
 CONFIG_PACKAGE_curl=y
@@ -206,8 +208,7 @@ CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_i915-firmware=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
-# CONFIG_PACKAGE_ip6tables-nft is not set
-CONFIG_PACKAGE_ip6tables-legacy=y
+CONFIG_PACKAGE_ip6tables-nft=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_ipt2socks=y
@@ -219,7 +220,6 @@ CONFIG_PACKAGE_iptables-mod-nat-extra=y
 CONFIG_PACKAGE_iptables-mod-socket=y
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 CONFIG_PACKAGE_iptables-nft=y
-CONFIG_PACKAGE_iptables-legacy=y
 CONFIG_PACKAGE_iputils-ping=y
 CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_iwinfo=y
@@ -233,6 +233,7 @@ CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-cfg80211=y
 CONFIG_PACKAGE_kmod-crypto-aead=y
 CONFIG_PACKAGE_kmod-crypto-authenc=y
+CONFIG_PACKAGE_kmod-crypto-blake2b=y
 CONFIG_PACKAGE_kmod-crypto-cbc=y
 CONFIG_PACKAGE_kmod-crypto-ccm=y
 CONFIG_PACKAGE_kmod-crypto-chacha20poly1305=y
@@ -243,6 +244,7 @@ CONFIG_PACKAGE_kmod-crypto-deflate=y
 CONFIG_PACKAGE_kmod-crypto-des=y
 CONFIG_PACKAGE_kmod-crypto-echainiv=y
 CONFIG_PACKAGE_kmod-crypto-gcm=y
+CONFIG_PACKAGE_kmod-crypto-geniv=y
 CONFIG_PACKAGE_kmod-crypto-gf128=y
 CONFIG_PACKAGE_kmod-crypto-ghash=y
 CONFIG_PACKAGE_kmod-crypto-hmac=y
@@ -258,8 +260,10 @@ CONFIG_PACKAGE_kmod-crypto-rng=y
 CONFIG_PACKAGE_kmod-crypto-seqiv=y
 CONFIG_PACKAGE_kmod-crypto-sha1=y
 CONFIG_PACKAGE_kmod-crypto-sha256=y
+CONFIG_PACKAGE_kmod-crypto-sha3=y
 CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-crypto-user=y
+CONFIG_PACKAGE_kmod-crypto-xxhash=y
 CONFIG_PACKAGE_kmod-cryptodev=y
 CONFIG_PACKAGE_kmod-dma-buf=y
 CONFIG_PACKAGE_kmod-drm=y
@@ -287,10 +291,14 @@ CONFIG_PACKAGE_kmod-fs-exportfs=y
 CONFIG_PACKAGE_kmod-fs-f2fs=y
 CONFIG_PACKAGE_kmod-fs-ntfs3=y
 CONFIG_PACKAGE_kmod-fs-xfs=y
+CONFIG_PACKAGE_kmod-hid=y
+CONFIG_PACKAGE_kmod-hid-generic=y
+CONFIG_PACKAGE_kmod-hwmon-emc2305=m
 CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-ikconfig=y
 CONFIG_PACKAGE_kmod-inet-diag=y
+CONFIG_PACKAGE_kmod-input-evdev=y
 CONFIG_PACKAGE_kmod-ip6tables=y
 CONFIG_PACKAGE_kmod-ipsec=y
 CONFIG_PACKAGE_kmod-ipsec4=y
@@ -316,15 +324,20 @@ CONFIG_PACKAGE_kmod-kvm-intel=y
 CONFIG_PACKAGE_kmod-kvm-x86=y
 CONFIG_PACKAGE_kmod-l2tp=y
 CONFIG_PACKAGE_kmod-lib-lz4=y
+CONFIG_PACKAGE_kmod-lib-lz4-decompress=y
 CONFIG_PACKAGE_kmod-lib-raid6=y
 CONFIG_PACKAGE_kmod-lib-textsearch=y
 CONFIG_PACKAGE_kmod-lib-xor=y
+CONFIG_PACKAGE_kmod-lib-xxhash=y
 CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
 CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
 CONFIG_PACKAGE_kmod-lib-zstd=y
 CONFIG_PACKAGE_kmod-libwx=y
 CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_kmod-macvlan=y
+CONFIG_PACKAGE_kmod-mlx4-core=y
+CONFIG_PACKAGE_kmod-mlx5-core=y
+CONFIG_PACKAGE_kmod-mlxfw=y
 CONFIG_PACKAGE_kmod-mt76-connac=y
 CONFIG_PACKAGE_kmod-mt76-core=y
 CONFIG_PACKAGE_kmod-mt76-usb=y
@@ -360,7 +373,7 @@ CONFIG_PACKAGE_kmod-nls-cp950=y
 CONFIG_PACKAGE_kmod-nls-ucs2-utils=m
 CONFIG_PACKAGE_kmod-nvme=y
 CONFIG_PACKAGE_kmod-oaf=y
-CONFIG_PACKAGE_kmod-pcs_xpcs=y
+CONFIG_PACKAGE_kmod-pcs-xpcs=y
 CONFIG_PACKAGE_kmod-phy-airoha-en8811h=m
 CONFIG_PACKAGE_kmod-phylink=y
 CONFIG_PACKAGE_kmod-pppol2tp=y
@@ -375,11 +388,13 @@ CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-mqprio-common=m
+CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-shortcut-fe=y
 CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
 CONFIG_PACKAGE_kmod-sit=y
 CONFIG_PACKAGE_kmod-sound-core=y
 CONFIG_PACKAGE_kmod-tcp-bbr3=y
+CONFIG_PACKAGE_kmod-tcp-brutal=y
 CONFIG_PACKAGE_kmod-thermal=y
 CONFIG_PACKAGE_kmod-tls=y
 CONFIG_PACKAGE_kmod-tun=y
@@ -389,12 +404,16 @@ CONFIG_PACKAGE_kmod-udptunnel6=y
 CONFIG_PACKAGE_kmod-usb-audio=y
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
+CONFIG_PACKAGE_kmod-usb-hid=y
 CONFIG_PACKAGE_kmod-usb-net=y
 CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
 CONFIG_PACKAGE_kmod-usb-net-ipheth=y
 CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_PACKAGE_kmod-usb-net-rtl8152-vendor=y
 CONFIG_PACKAGE_kmod-usb-printer=y
+CONFIG_PACKAGE_kmod-usb-serial-ch348=m
+CONFIG_PACKAGE_kmod-usb-storage=y
+CONFIG_PACKAGE_kmod-usb-storage-uas=y
 CONFIG_PACKAGE_kmod-usb-xhci-hcd=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb2-pci=y
@@ -405,6 +424,7 @@ CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_krb5-libs=y
+CONFIG_PACKAGE_less=y
 CONFIG_PACKAGE_libQt6Core=y
 CONFIG_PACKAGE_libQt6Network=y
 CONFIG_PACKAGE_libQt6Sql=y
@@ -495,6 +515,8 @@ CONFIG_PACKAGE_liburcu=y
 CONFIG_PACKAGE_liburing=y
 CONFIG_PACKAGE_libusb-1.0=y
 CONFIG_PACKAGE_libusbmuxd=y
+CONFIG_PACKAGE_libustream-mbedtls=m
+CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libxdp=m
@@ -510,31 +532,30 @@ CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_lua-neturl=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-accesscontrol=y
-# CONFIG_PACKAGE_luci-app-airconnect is not set
-# CONFIG_PACKAGE_luci-app-airplay2 is not set
-# CONFIG_PACKAGE_luci-app-alist is not set
+CONFIG_PACKAGE_luci-app-airconnect=y
+CONFIG_PACKAGE_luci-app-airplay2=y
+CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
-# CONFIG_PACKAGE_luci-app-commands is not set
-# CONFIG_PACKAGE_luci-app-ddns is not set
+CONFIG_PACKAGE_luci-app-commands=y
+CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-dockerman=y
-# CONFIG_PACKAGE_luci-app-eqos is not set
+CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-filebrowser=y
 CONFIG_PACKAGE_luci-app-firewall=y
-# CONFIG_PACKAGE_luci-app-frpc is not set
-# CONFIG_PACKAGE_luci-app-gowebdav is not set
-# CONFIG_PACKAGE_luci-app-homeproxy is not set
-# CONFIG_PACKAGE_luci-app-mentohust is not set
-# CONFIG_PACKAGE_luci-app-mosdns is not set
-# CONFIG_PACKAGE_luci-app-natmap is not set
-CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-gowebdav=y
+CONFIG_PACKAGE_luci-app-homeproxy=y
+CONFIG_PACKAGE_luci-app-mentohust=y
+CONFIG_PACKAGE_luci-app-mosdns=y
+CONFIG_PACKAGE_luci-app-natmap=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
-# CONFIG_PACKAGE_luci-app-oaf is not set
+CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-opkg=y
-# CONFIG_PACKAGE_luci-app-ota is not set
+CONFIG_PACKAGE_luci-app-ota=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
@@ -548,11 +569,11 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
 CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy=y
-# CONFIG_PACKAGE_luci-app-qbittorrent is not set
-# CONFIG_PACKAGE_luci-app-ramfree is not set
+CONFIG_PACKAGE_luci-app-qbittorrent=y
+CONFIG_PACKAGE_luci-app-ramfree=y
 CONFIG_PACKAGE_luci-app-samba4=y
-# CONFIG_PACKAGE_luci-app-socat is not set
-# CONFIG_PACKAGE_luci-app-sqm is not set
+CONFIG_PACKAGE_luci-app-socat=y
+CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
@@ -563,7 +584,7 @@ CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-watchcat=y
-# CONFIG_PACKAGE_luci-app-wolplus is not set
+CONFIG_PACKAGE_luci-app-wolplus=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
@@ -587,16 +608,16 @@ CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-theme-bootstrap is not set
 # CONFIG_PACKAGE_luci-theme-material is not set
 # CONFIG_PACKAGE_luci-theme-openwrt-2020 is not set
-# CONFIG_PACKAGE_mentohust is not set
-# CONFIG_PACKAGE_microsocks is not set
+CONFIG_PACKAGE_mentohust=y
+CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_miniupnpd-nftables=y
-# CONFIG_PACKAGE_mosdns is not set
+CONFIG_PACKAGE_mosdns=y
 CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_musl-fts=m
-# CONFIG_PACKAGE_naiveproxy is not set
+CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_nat6=y
-# CONFIG_PACKAGE_natmap is not set
-CONFIG_PACKAGE_netdata=y
+CONFIG_PACKAGE_natmap=y
+CONFIG_PACKAGE_nethogs=y
 CONFIG_PACKAGE_nginx=y
 CONFIG_PACKAGE_nginx-all-module=y
 CONFIG_PACKAGE_nginx-mod-luci=y
@@ -612,23 +633,20 @@ CONFIG_PACKAGE_pciids=y
 CONFIG_PACKAGE_pciutils=y
 CONFIG_PACKAGE_perf=m
 CONFIG_PACKAGE_ppp-mod-pppol2tp=y
-CONFIG_DEFAULT_telnet-bsd=y
-CONFIG_DEFAULT_kmod-ikconfig=y
 CONFIG_PACKAGE_procps-ng=y
-CONFIG_PACKAGE_procps-ng-watch=y
 CONFIG_PACKAGE_procps-ng-free=y
 CONFIG_PACKAGE_procps-ng-ps=y
 CONFIG_PACKAGE_procps-ng-top=y
 CONFIG_PACKAGE_qbittorrent=y
 CONFIG_PACKAGE_qemu-ga=y
-# CONFIG_PACKAGE_qosify is not set
+CONFIG_PACKAGE_qosify=m
 CONFIG_PACKAGE_qrencode=y
 CONFIG_PACKAGE_qt6-plugin-libqopensslbackend=y
 CONFIG_PACKAGE_qt6-plugin-libqsqlite=y
 # CONFIG_PACKAGE_r8169-firmware is not set
-# CONFIG_PACKAGE_radeon-firmware is not set
-# CONFIG_PACKAGE_rblibtorrent is not set
-# CONFIG_PACKAGE_redsocks2 is not set
+CONFIG_PACKAGE_radeon-firmware=y
+CONFIG_PACKAGE_rblibtorrent=y
+CONFIG_PACKAGE_redsocks2=y
 CONFIG_PACKAGE_rename=y
 CONFIG_PACKAGE_resize2fs=y
 CONFIG_PACKAGE_resolveip=y
@@ -762,7 +780,7 @@ CONFIG_VERSION_MANUFACTURER=""
 CONFIG_VERSION_MANUFACTURER_URL=""
 CONFIG_VERSION_NUMBER=""
 CONFIG_VERSION_PRODUCT=""
-CONFIG_VERSION_REPO="https://downloads.openwrt.org/releases/23.05.2"
+CONFIG_VERSION_REPO="https://downloads.openwrt.org/releases/23.05.4"
 CONFIG_VERSION_SUPPORT_URL=""
 CONFIG_WPA_MSG_MIN_PRIORITY=3
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
